# EffectiveModernCPP

./: .gitignore  BUILD.md  CMakeLists.txt  Effective-Modern-CPP.sln  Effective-Modern-CPP.vcxproj  Effective-Modern-CPP.vcxproj.filters  EffectiveModernCPP.sln  EffectiveModernCPP.vcxproj  EffectiveModernCPP.vcxproj.filters  Item1.h  Item10.h  Item14.h  Item15.h  Item16.h  Item17.h  Item18.h  Item19.h  Item2.h  Item20.h  Item21.h  Item22.cxx  Item22.h  Item23.h  Item24 - 副本 (2).h  Item24.h  Item27.h  Item3.h  Item31.h  Item32.h  Item33.h  Item34.h  Item35.h  Item37.h  Item38.h  Item39.h  Item40.h  Item41.h  Item42.h  Item5.h  Item7.h  (+6 more)
concurrency/: AtomicVsVolatile.h  Emplacement.h  EventNotification.h  PassByValue.h  TaskBasedProgramming.h  ThreadHandleDestruction.h  ThreadRAII.h
examples/: CMakeLists.txt  README.md  basic_type_deduction.cpp  lambda_basics.cpp  smart_pointer_basics.cpp
forwarding/: OverloadingAlternatives.h  PerfectForwarding.h  UniversalReferences.h
lambdas/: DecltypeForwarding.h  InitCapture.h  LambdaCaptures.h  LambdaVsBind.h
modern_features/: BraceInitialization.h  ConstexprUsage.h  NoexceptFunctions.h  PreferAuto.h  PreferNullptr.h  ScopedEnums.h  SpecialMemberFunctions.h  ThreadSafeConst.h
smart_pointers/: MakeSmartPtr.h  PimplIdiom.cxx  PimplIdiom.h  SharedPtrUsage.h  UniquePtrUsage.h  WeakPtrUsage.h
type_deduction/: AutoTypeDeduction.h  DecltypeUsage.h  TemplateTypeDeduction.h
utils/: type.h
